--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,8 @@ ul {
 
 /* Start Header */
 header {
-    box-shadow: 0 0 10px #ddd;
+    box-shadow: 0 0 10px var(--lines-color);
+    background-color: var(--bg-default);
 }
 
 header nav {
@@ -81,37 +82,19 @@ header nav .buttons li ion-icon {
 
 .shapes{
     height: 55px;
+    background-color: var(--bg-default);
 }
 .shape {
 width: 100vw;
-height: 25vh;
+height: 22vh;
 clip-path: polygon(0 0, 100% 0, 100% 33%, 78% 15%, 60% 3%, 0 32%);
 background: linear-gradient(50deg,var(--brand-primary),var(--brand-secondary));
 }
 
 /* Start Welcome Section */
-.welcome {}
-
-/* .tri {
-    display: flex;
-    align-items: center;
+.welcome {
+    background-color: var(--bg-default);
 }
-
-.triangle-right {
-    width: 0;
-    height: 0;
-    border-top: 0vh solid transparent;
-    border-left: 50vw solid var(--brand-primary);
-    border-bottom: 10vh solid transparent;
-}
-
-.triangle-left {
-    width: 0;
-    height: 0;
-    border-top: 0vh solid transparent;
-    border-right: 50vw solid var(--brand-secondary);
-    border-bottom: 10vh solid transparent;
-} */
 
 .welcome .container {
     display: flex;
@@ -120,22 +103,24 @@ background: linear-gradient(50deg,var(--brand-primary),var(--brand-secondary));
 }
 
 .welcome .text {
-    margin-top: -25px;
+    margin-top: -20px;
+    padding-bottom: 15px;
 }
 
 .welcome h1 {
     color: var(--brand-secondary);
+    font-size: 18px;
 }
 
 .welcome p {
     color: var(--body-text);
+    font-size: 16px;
 }
 
 /* End Welcome Section */
 
 /* Start Main Section */
 main {
-    margin-top: 30px;
     background-color: var(--bg-body);
     padding: 20px 0;
 }
@@ -144,16 +129,17 @@ main .search {
     position: relative;
     display: flex;
     align-items: center;
-    box-shadow: 0 0 10px #ddd;
+    box-shadow: 0 0 10px var(--lines-color);
+    border-radius: 5px;
 }
 
 main .search input {
     width: 80%;
     font-family: 'Nunito Sans', sans-serif;
     padding: 8px 8px 8px 30px;
-    background-color: #fff;
+    background-color: var(--bg-default);
     border: none;
-    border: 1px solid var(--lines-color);
+    /* border: 1px solid var(--lines-color); */
     border-radius: 5px;
     color: #929292;
     height: 40px;
@@ -164,31 +150,39 @@ main .search ion-icon.search-icon {
     left: 10px;
     font-size: 14px;
     line-height: 40px;
+    color: var(--body-text);
 }
 
 main .select {
     width: 11%;
-    background-color: white;
+    background-color: var(--bg-default);
     font-size: 10px;
-    border: 1px solid var(--lines-color);
+    border-left: 1px solid var(--lines-color);
     height: 40px;
-    margin-left: -2px;
+    margin-left: 0px;
     padding: 5px 20px 5px 10px;
     text-transform: capitalize;
     position: relative;
 }
-
+main .select.filter{
+    border-radius: 0px 5px 5px 0;
+}
+main .select p{
+    color: var(--body-text);
+}
 main .selcet-bottom {
     padding-top: 3px;
 }
 
-main .search p.def {
+main .search label.def {
     font-weight: 500;
+    color: var(--body-text);
 }
 
 main ion-icon.arrow-icon {
     position: absolute;
     right: 8px;
+    color: var(--body-text);
 }
 
 .courses-content {
@@ -202,6 +196,7 @@ main ion-icon.arrow-icon {
 .courses-text p {
     font-weight: bold;
     font-size: 20px;
+    color: var(--body-text);
 }
 
 .courses-content {
@@ -209,11 +204,16 @@ main ion-icon.arrow-icon {
 }
 
 .course-box {
-    width: 19%;
+    width: 18%;
     background-color: var(--bg-default);
-    border-radius: 12px;
+    border-radius: 5px;
     margin-bottom: 20px;
     height: 270px;
+    box-shadow: 0 0 10px var(--lines-color);
+}
+
+.course-box:nth-child(4) img{
+    background-color: white;
 }
 
 .course-box:nth-last-child(1) {
@@ -224,6 +224,7 @@ main ion-icon.arrow-icon {
     width: 100%;
     height: 120px;
     transition: 0.5s;
+    border-radius: 5px 5px 0 0;
 }
 
 .course-box:hover img {
@@ -246,6 +247,11 @@ main ion-icon.arrow-icon {
     font-size: 12px;
     font-weight: 500;
     line-height: 1;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: var(--body-text);
 }
 
 .course-box-text h3 {
@@ -261,7 +267,7 @@ main ion-icon.arrow-icon {
 }
 
 .course-box-text .stars {
-    margin: 12px 0 10px;
+    margin: 10px 0 10px;
 }
 
 .course-box-text .stars ion-icon {
@@ -282,6 +288,7 @@ footer {
     background-color: var(--bg-body);
     text-align: center;
     padding-bottom: 25px;
+    color: var(--body-text);
 }
 
 footer ion-icon {
@@ -294,7 +301,7 @@ footer ion-icon {
 /* End footer */
 
 /* Small Screen */
-@media(min-width:319px) and (max-width:767px) {
+@media(max-width:767px) {
     header nav .logo a {
         font-size: 14px;
     }
@@ -308,7 +315,7 @@ footer ion-icon {
         text-align: center;
     }
     .shape{
-        height: 15vh;
+        height: 12vh;
     }
     .welcome .text {
         margin-top: -15px;
@@ -375,7 +382,7 @@ footer ion-icon {
         font-size: 14px;
     } 
     .shape{
-        height: 20vh;
+        height: 15vh;
     }
     .welcome .text {
         margin-top: -20px;
@@ -419,6 +426,12 @@ footer ion-icon {
     }
 }
 @media(min-width:923px) and (max-width:1200px) {
+    .shape{
+        height: 15vh;
+    }
+    .welcome .text {
+        margin-top: -20px;
+    }
     .course-box {
         width: 24%;
         height: 270px;
@@ -431,11 +444,15 @@ body.detail{
     background-color: var(--bg-body);
 }
 .welcome.detail{
-    background-color: white;
+    background-color: var(--bg-default);
+    padding-bottom: 15px;
+}
+header{
+    background-color: var(--bg-default);
 }
 .course-datails{
     background-color: #333;
-    margin-top: 15px;
+    padding-top: 15px;
     position: relative;
 }
 .course-details-text{
@@ -451,7 +468,7 @@ body.detail{
 }
 .course-details-text h3{
     text-transform: uppercase;
-    color: var(--bg-body);
+    color: white;
 }
 .course-details-text .stars{
     width: 15%;
@@ -463,27 +480,26 @@ body.detail{
 }
 .course-details-text p{
     width: 80%;
-    color: var(--bg-body);
+    color: white;
 }
 .course-detail-box{
     position: absolute;
-    width: 20%;
-    border: 1px solid var(--lines-color);
+    width: 22%;
+    border: 1px solid white;
     z-index: 1;
     right: 20%;
     top: 15%;
     left: 50%;
     transform: translate(60%,0%);
-    padding-bottom: 15px;
 }
 .course-detail-box img{
     width: 100%;
     height: 150px;
 }
 .course-detail-box-content{
-    background-color: var(--bg-default);
+    background-color: white;
     margin-top: -6px;
-    padding: 10px;
+    padding: 10px 10px 15px 10px;
 }
 .course-detail-box-content p.author{
     margin-bottom: 10px;
@@ -498,13 +514,13 @@ body.detail{
     color: var(--brand-primary);
 }
 .course-detail-box-fav{
-    border: 1px solid var(--lines-color);
+    border: 1px solid #ddd;
     padding: 15px;
 }
 .course-detail-box-fav a{
     background-color: var(--brand-secondary);
     color: white;
-    display: block;
+    display: inline-block;
     padding: 10px 20px;
     display: flex;
     justify-content: center;
@@ -523,13 +539,15 @@ body.detail{
 .course-content{
     border: 1px solid var(--lines-color);
     width: 35%;
-    margin: 20px 0 30px 24%;
+    margin: 20px 0 30px 22%;
     border-radius: 5px;
+    background-color: var(--bg-default);
 }
 .course-content h4{
     font-weight: bold;
     border-bottom: 1px solid var(--lines-color);
     padding: 10px 0px 10px 15px;
+    color: var(--body-text);
 }
 .course-content h4 span{
     text-transform: uppercase;
@@ -549,6 +567,7 @@ body.detail{
     color: var(--brand-secondary);
     font-size: 18px;
     font-weight: bold;
+    flex-shrink: 0;
 }
 .course-content ul li a{
     font-size: 16px;
@@ -558,7 +577,7 @@ body.detail{
 
 
 /* Media Query For The Details Page */
-@media(min-width:319px) and (max-width:767px) {
+@media(max-width:767px) {
     .course-datails{
         background-color: #333;
         margin-top: 15px;
@@ -680,5 +699,70 @@ body.detail{
     .course-content{
         width: 90%;
         margin: 30px auto;
+    }
+}
+
+/* Start Favourites Page */
+.favourites{
+    background-color: var(--bg-default);
+    box-shadow: 0 0 10px var(--lines-color);
+    padding: 5px 0;
+    position: sticky;
+    bottom: 0;
+}
+.favourites h2{
+    font-size: 13px;
+    font-weight: bold;
+    padding-bottom: 5px;
+    color: var(--body-text);
+}
+.favourites .favourites-content{
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+}
+.favourites .favourites-content-box{
+    width: 12%;
+    border: 1px solid var(--lines-color);
+    box-shadow: 0 0 10px var(--lines-color);
+    border-radius: 5px;
+    margin-right: 10px;
+    height: 110px;
+}
+.favourites img{
+    width: 100%;
+    border-radius: 5px 5px 0 0;
+    height: 60px;
+    /* object-fit: contain; */
+}
+.favourites-text{
+    padding-left: 5px;
+}
+.favourites-text h3{
+    font-size: 13px;
+    color: var(--body-text);
+}
+.favourites-text .stars{
+    width: 90%;
+    padding-bottom: 5px;
+}
+.favourites-text ion-icon{
+    color: #E29916;
+    font-size: 12px;
+    margin-right: -5px;
+    font-weight: bold;
+}
+
+/* media */
+
+@media(max-width:767px){
+    .favourites .favourites-content-box{
+        width: 25%;
+    }
+}
+
+@media(min-width:768px) and (max-width:1100px){
+    .favourites .favourites-content-box{
+        width: 15%;
     }
 }
