--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,7 +579,6 @@ header{
 /* Media Query For The Details Page */
 @media(max-width:767px) {
     .course-datails{
-        background-color: #333;
         margin-top: 15px;
         position: static;
         padding-bottom: 20px;
@@ -601,7 +600,6 @@ header{
     }
     .course-details-text h3{
         text-transform: uppercase;
-        color: var(--bg-body);
         font-size: 14px;
         margin: 5px 0;
     }
@@ -615,7 +613,6 @@ header{
     }
     .course-details-text p{
         width: 100%;
-        color: var(--bg-body);
     }
     .course-detail-box{
         position: static;
@@ -630,7 +627,7 @@ header{
     }
     .course-details-text p{
         width: 100%;
-        color: var(--bg-body);
+        color: white;
     }
     .course-content{
         width: 95%;
@@ -664,7 +661,6 @@ header{
     }
     .course-details-text h3{
         text-transform: uppercase;
-        color: var(--bg-body);
         font-size: 14px;
         margin: 5px 0;
     }
@@ -678,7 +674,7 @@ header{
     }
     .course-details-text p{
         width: 100%;
-        color: var(--bg-body);
+        color: white;
     }
     .course-detail-box{
         position: static;
@@ -694,7 +690,6 @@ header{
     }
     .course-details-text p{
         width: 100%;
-        color: var(--bg-body);
     }
     .course-content{
         width: 90%;
