--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
     --lines-color: #DDD;
     --body-text: #333;
     --heart-color: #DC143C;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 body {
@@ -61,12 +62,13 @@ header nav .logo a {
 }
 
 header nav .buttons li {
-    margin-right: 10px;
     border: 1px solid var(--lines-color);
     padding: 5px 10px;
     border-radius: 8px;
 }
-
+header nav .buttons li.dark{
+    margin-right: 5px;
+}
 header nav .buttons li ion-icon,
 header nav .buttons li a {
     color: var(--body-text);
@@ -140,16 +142,16 @@ main .search input {
     background-color: var(--bg-default);
     border: none;
     /* border: 1px solid var(--lines-color); */
-    border-radius: 5px;
+    border-radius: 5px 0 0 5px;
     color: #929292;
-    height: 40px;
+    height: 45px;
 }
 
 main .search ion-icon.search-icon {
     position: absolute;
     left: 10px;
     font-size: 14px;
-    line-height: 40px;
+    line-height: 45px;
     color: var(--body-text);
 }
 
@@ -158,23 +160,28 @@ main .select {
     background-color: var(--bg-default);
     font-size: 10px;
     border-left: 1px solid var(--lines-color);
-    height: 40px;
-    margin-left: 0px;
+    height: 45px;
     padding: 5px 20px 5px 10px;
     text-transform: capitalize;
     position: relative;
+    padding-bottom: 5px;
 }
-main .select.filter{
-    border-radius: 0px 5px 5px 0;
-}
-main .select p{
+main .select label{
     color: var(--body-text);
+    display: block;
+    padding-bottom: 2px;
+    width: fit-content;
+} 
+main .selcet-bottom select{
+    display: block;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    color: var(--body-text);
+    margin-left: -3px;
+    font-family: 'Nunito Sans', sans-serif;
 }
-main .selcet-bottom {
-    padding-top: 3px;
-}
-
-main .search label.def {
+/* main .search label.def {
     font-weight: 500;
     color: var(--body-text);
 }
@@ -183,7 +190,7 @@ main ion-icon.arrow-icon {
     position: absolute;
     right: 8px;
     color: var(--body-text);
-}
+}  */
 
 .courses-content {
     margin-top: 20px;
@@ -200,11 +207,12 @@ main ion-icon.arrow-icon {
 }
 
 .courses-content {
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(230px,1fr));
+    gap: 15px;
 }
 
 .course-box {
-    width: 18%;
     background-color: var(--bg-default);
     border-radius: 5px;
     margin-bottom: 20px;
@@ -212,12 +220,8 @@ main ion-icon.arrow-icon {
     box-shadow: 0 0 10px var(--lines-color);
 }
 
-.course-box:nth-child(4) img{
+.course-box:nth-child(4) img,.course-box:nth-child(1) img{
     background-color: white;
-}
-
-.course-box:nth-last-child(1) {
-    visibility: hidden;
 }
 
 .course-box img {
@@ -260,7 +264,6 @@ main ion-icon.arrow-icon {
 }
 
 .course-box-text h3 a {
-    text-transform: capitalize;
     color: var(--body-text);
     font-size: 14px;
     font-weight: bold;
@@ -351,29 +354,31 @@ footer ion-icon {
         width: 50%;
         margin-right: 0px;
         margin-top: -1px;
+        border-top: 1px solid var(--lines-color);
     }
 
     main .select.sort {
         border-radius: 0px 0px 0px 5px;
         margin-left: 0px;
+        border-left: none;
     }
-
     main .select.filter {
-        border-radius: 0px 0px 5px 0;
+        border-radius: 0px 0px 5px 0px;
+        margin-left: 0px;
+        border-left: 1px solid var(--lines-color);
     }
 
+    
     .courses {
         margin-bottom: 0px;
     }
-
-    .course-box {
-        width: 100%;
-        height: 270px;
+    .courses-content {
+        /* flex-wrap: wrap; */
+        display: grid;
+        /* grid-template-columns: repeat(1,1fr); */
+        gap: 10px;
     }
 
-    .course-box:nth-last-child(1) {
-        display: none;
-    }
 }
 
 /* Meduim Screen */
@@ -404,25 +409,31 @@ footer ion-icon {
         width: 50%;
         margin-right: 0px;
         margin-top: -1px;
+        border-top: 1px solid var(--lines-color);
     }
     main .select.sort {
         border-radius: 0px 0px 0px 5px;
         margin-left: 0px;
+        border-left: none;
+    }
+    main .select.sort {
+        border-radius: 0px 0px 0px 5px;
+        margin-left: 0px;
+        border-left: none;
     }
     main .select.filter {
-        border-radius: 0px 0px 5px 0;
+        border-radius: 0px 0px 5px 0px;
+        margin-left: 0px;
+        border-left: 1px solid var(--lines-color);
     }
     .courses {
         margin-bottom: 0px;
     }
-
-    .course-box {
-        width: 49%;
-        height: 270px;
-    }
-
-    .course-box:nth-last-child(1) {
-        display: none;
+    .courses-content {
+        /* flex-wrap: wrap; */
+        display: grid;
+        /* grid-template-columns: repeat(3,minmax(200px,1fr)); */
+        gap: 10px;
     }
 }
 @media(min-width:923px) and (max-width:1200px) {
@@ -431,10 +442,6 @@ footer ion-icon {
     }
     .welcome .text {
         margin-top: -20px;
-    }
-    .course-box {
-        width: 24%;
-        height: 270px;
     }
 }
 
@@ -456,25 +463,23 @@ header{
     position: relative;
 }
 .course-details-text{
-    width: 50%;
-    margin-left: 20%;
+    width: 60%;
+    margin-left: 17%;
     padding: 30px 0;
 }
 .course-details-text h2{
     color: var(--brand-secondary);
     font-weight: 400;
     font-size: 18px;
-    text-transform: capitalize;
 }
 .course-details-text h3{
-    text-transform: uppercase;
     color: white;
 }
 .course-details-text .stars{
     width: 15%;
 }
 .course-details-text ion-icon{
-    font-size: 12px;
+    font-size: 13px;
     margin-right: 0px;
     color: #E29916;
 }
@@ -487,7 +492,7 @@ header{
     width: 22%;
     border: 1px solid white;
     z-index: 1;
-    right: 20%;
+    right: 22%;
     top: 15%;
     left: 50%;
     transform: translate(60%,0%);
@@ -539,7 +544,7 @@ header{
 .course-content{
     border: 1px solid var(--lines-color);
     width: 35%;
-    margin: 20px 0 30px 22%;
+    margin: 20px 0 30px 20%;
     border-radius: 5px;
     background-color: var(--bg-default);
 }
@@ -749,10 +754,14 @@ header{
 }
 
 /* media */
-
-@media(max-width:767px){
+@media(max-width:521px){
     .favourites .favourites-content-box{
         width: 25%;
+    }
+}
+@media(min-width:522px) and (max-width:767px){
+    .favourites .favourites-content-box{
+        width: 20%;
     }
 }
 
